--- a/index.html
+++ b/index.html
@@ -35,10 +35,9 @@
         <p class="texto2">Ingrese el texto que deseas encriptar o desencriptar</p>
       </div>
       <div id="botonCopiar">
-        <textarea class="text-input-salida" name="msg" id="msg" cols="30" rows="10" hidden></textarea>
+        <textarea class="text-input-salida" name="msg" id="msg" cols="30" rows="10"></textarea>
         <input class="btn3" type="button" value="Copiar" id="btn-copy">
       </div>
-      
     </section>  
   </main>
   <script src="scrip.js"></script>
